# sqlgraphql

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
sqlgraphql/: builders.py  converters.py  factories.py  model.py  registry.py
src/sqlgraphql/: _ast.py  _gql.py  _orm.py  _resolvers.py  _transformers.py  _utils.py  builders.py  converters.py  exceptions.py  factories.py  gql_scalars.py  model.py  registry.py  schema.py  types.py
src/sqlgraphql/_builders/: enum.py  pagination.py  selecting.py  sorting.py  util.py
src/sqlgraphql/_builders/filtering/: base.py  builder.py  filters.py
src/sqlgraphql/gql/: directives.py  scalars.py
stubs/sqlalchemy_utils/: __init__.pyi
stubs/sqlalchemy_utils/types/: choice.pyi
tests/: test_sqlgraphql.py
tests/integration/: conftest.py  test_1_n_selection.py  test_basic_select.py  test_column_type_conversion.py  test_column_types.py  test_filtering.py  test_n_1_selection.py  test_offset_pagination.py  test_recursive_definitions.py  test_sorting.py
