[tool.poetry]
name = "sqlgraphql"
version = "0.1.0"
description = "Library for generating SQL queries from GraphQL queries using graphene."
authors = ["Nejc Skofic <nejc.skofic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^3.0"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nox-poetry = "^0.8.6"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = {version = "^21.11b1", allow-prereleases = true}
mypy = "^0.931"
isort = "^5.10.1"
graphene-stubs = "^0.15"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
SQLAlchemy-Utils = "^0.38.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "graphene_plugin"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
disallow_untyped_defs = true
mypy_path = ["$MYPY_CONFIG_FILE_DIR/stubs/"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "noxfile"
ignore_errors = true
follow_imports = "silent"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 99
