[project]
name = "sqlgraphql"
version = "0.1.0"
description = "Library for generating SQL queries from GraphQL queries using graphene."
authors = [
    {name = "Nejc Skofic",email = "nejc.skofic@gmail.com"},
]
dependencies = [
    "graphql-core>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
sqlalchemy-utils = [
    "SQLAlchemy-Utils<1.0.0,>=0.40.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]
lint = [
    "black==23.10.1",
    "ruff==0.1.3",
    "mypy==1.6.1",
]
dev = [
    "pre-commit<3.0.0,>=2.15.0",
    "nox>=2023.4.22",
]

[tool.pdm.build]
includes = []

[tool.black]
line-length = 99

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "S",
    #"D",
    "UP",
    "G"
]
ignore = [
    "S101",  # Use of `assert` detected
]

[tool.mypy]
files = ["."]
exclude = ["tests/", "noxfile.py$"]
mypy_path = [
    "$MYPY_CONFIG_FILE_DIR/src/",
    "$MYPY_CONFIG_FILE_DIR/stubs/"
]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "noxfile"
ignore_errors = true
follow_imports = "silent"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
